fixed z-index issues

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 #wrapper {
+    position: relative;
     display: inline-block;
     text-align: left;
     margin-top: 50px;
@@ -36,7 +37,6 @@ body {
     right: 0;
     transition: right 0.7s ease-in;
     overflow: auto;
-    z-index: -1;
 }
 
 #typesDiv::-webkit-scrollbar {
@@ -96,10 +96,12 @@ body {
     flex: 0 0 10%;
     margin: 0;
     align-self: center;
-    height:25px;
-    padding-top: 5px;;
+    height: 25px;
+    padding-top: 5px;
+    ;
 }
-#searchButton:hover{
+
+#searchButton:hover {
     color: rgba(0, 0, 0, 0.3)
 }
 
@@ -114,6 +116,8 @@ body {
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
 }
+
+
 /* להגדיל את האייקון שיתפוס את כל הכפתור ואולי אפילו להוציא את ההכפתור */
 
 #imgBox {
